--- a/main.css
+++ b/main.css
@@ -1,3 +1,25 @@
 body{
   background-color: steelblue;
 }
+
+.head-shot{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.text{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.my-head{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  
+}
